# Prompt2Policy

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  architecture.html  conftest.py  install.sh  pyproject.toml
benchmark/: test_cases_exotic_ant_halfcheetah_humanoid.csv  test_cases_isaaclab.csv
docs/: ARCHITECTURE.md  GUIDE.md  RELATED_WORK.md  metrics.md  v1-release-notes.html
docs/camera_test/: results.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BarStat.tsx  BenchmarkFormFields.tsx  BenchmarkRunCard.tsx  CollapsibleCard.tsx  ConfigComparisonTable.tsx  ConfigDiffTable.tsx  CoreGrid.tsx  EnvSelector.tsx  (+34 more)
src/p2p/: config.py  contracts.py  evaluator_isaaclab.py  event_log.py  settings.py
tests/: conftest.py  test_agent_tools.py  test_api.py  test_background_enrichment.py  test_benchmark_fallback_paths.py  test_benchmark_service.py  test_config.py  test_contract_schema_sync.py  test_entity_lifecycle.py  test_env.py  test_env_spec.py  test_event_log.py  test_guardrails.py  test_intent_elicitor.py  test_isaaclab_backend.py  test_isaaclab_reward_vec_wrapper.py  test_iteration_record.py  test_iteration_runner.py  test_iteration_to_summary.py  test_judge_agent.py  test_judge_author.py  test_llm_client.py  test_loop.py  test_motion_overlay.py  test_parallel_trainer.py  test_process_isolation.py  test_resolve_session_path.py  test_revise_agent.py  test_reward_author.py  test_reward_function.py  test_reward_loader.py  test_round_metric.py  test_run_session.py  test_sb3_trainer.py  test_session_analyzer.py  test_session_config_validation.py  test_session_cpu_alloc.py  test_session_id.py  test_session_recovery.py  test_simulator.py  (+12 more)
tests/test_scheduler/: test_backend.py  test_benchmark_aggregation.py  test_controllers.py  test_job_scheduler.py  test_node_store.py  test_routes.py  test_scheduler.py  test_scheduler_class.py  test_session_routing.py  test_spec_builder.py  test_ssh_utils.py  test_types.py
(+108 files in other folders)
