[project]
name = "p2p"
version = "0.1.12"
description = "Reward Loop — LLM-driven reward shaping for MuJoCo and IsaacLab"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Prompt2Policy Contributors"}]
keywords = ["reinforcement-learning", "reward-shaping", "llm", "mujoco", "isaaclab", "ppo"]
requires-python = ">=3.11"

dependencies = [
    "mujoco>=3.5",
    "gymnasium[mujoco]>=1.2",
    "torch>=2.0",
    "numpy",
    "imageio[ffmpeg]",
    "psutil",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.40",
    "requests>=2.28",
    "Pillow>=10.0",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "google-genai>=1.65.0",
    "openai>=1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "av>=14.0.0",
    "opencv-python-headless>=4.13.0.92",
]

[project.urls]
Repository = "https://github.com/krafton-ai/prompt2policy"
Homepage = "https://github.com/krafton-ai/prompt2policy"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
]
# IsaacLab runtime deps (installed separately via `uv pip install` to avoid
# version conflicts with isaacsim's strict pins on uvicorn, pillow, etc.).
# See README.md "IsaacLab Installation" for the full install procedure.
isaaclab-deps = [
    "toml",
    "warp-lang",
    "trimesh",
    "prettytable",
    "h5py",
    "hidapi",
    "flatdict",
    "hydra-core",
    "omegaconf",
    "moviepy",
    "pyglet<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p2p"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/p2p/api/app.py" = ["E402"]
"src/p2p/run_session.py" = ["E402"]
"src/p2p/sb3_trainer.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
